# ComfyUI-NynxzNodes

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
nodes/: CreateFadeCompareVideo.py  CreateWipeCompareVideo.py  StringTemplateParser.py  enums.py
nodes/base/: CompareVideo.py
nodes/compare_video/: CompareVideo.py  CompareVideoOptions.py  CreateFadeCompareVideo.py  CreateWipeCompareVideo.py  __init__.py  utils.py
