[project]
name = "comfyui-nynxz-nodes"
version = "0.0.2"
description = "A collection of custom nodes for ComfyUI made by Nynxz."
authors = [{ name = "Nynxz", email = "contact@nynxz.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = []
dependencies = []

[project.urls]
Repository = "https://github.com/nynxz/ComfyUI-NynxzNodes"
BugTracker = "https://github.com/nynxz/ComfyUI-NynxzNodes/issues"
Documentation = "https://github.com/nynxz/ComfyUI-NynxzNodes/wiki"


[tool.comfy]
PublisherId = "nynxz"
DisplayName = "Nynxz's Custom Nodes"
Icon = "https://avatars.githubusercontent.com/u/60878743?v=4"
Tags = []
Repository = "https://github.com/nynxz/ComfyUI-NynxzNodes"
